--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,11 @@ body {
   background-size: cover;
   background-position: center center;
 }
+.carousel-control-next,
+.carousel-control-prev {
+  width: 6%;
+}
+
 /* CAROUSEL */
 
 /* NAVBAR */
@@ -99,7 +104,7 @@ footer ul .title {
   padding: 0.2rem;
 }
 footer a {
-  background-color: #f32c2cc9;
+  background-color: rgb(168, 38, 15);
   padding: 0.2rem;
   border-radius: 0.2rem;
   color: #ffffff;
@@ -108,6 +113,7 @@ footer a {
   justify-content: center;
   align-items: center;
   gap: 10px;
+  font-weight: 400;
   height: 100%;
   text-align: right;
   box-shadow: 2px 2px 3px #03030357;
@@ -128,10 +134,11 @@ footer ul li a .title::before {
   left: 60px;
   width: 10px;
   height: 10px;
-  background-color: #f32c2cab;
+  background-color: rgb(168, 38, 15);
   transform: rotate(45deg) translateY(-50%);
   border-radius: 2px;
 }
+
 footer a:hover {
   transform: translateY(-10px);
   color: white;
@@ -147,12 +154,13 @@ footer a:hover {
   padding: 0;
 }
 .social-media a:hover {
-  background-color: rgba(192, 164, 4, 0.925);
+  background-color: white;
+  color: rgb(168, 38, 15);
   transform: translatey(5px);
 }
 .social-media a {
-  background-color: rgba(22, 9, 9, 0.842);
-  transition: background-color 1s;
+  background-color: rgb(168, 38, 15);
+  transition: background-color 0.5s;
   border-radius: 50%;
   width: 3rem;
   height: 3rem;
