--- a/assets/css/sezai.css
+++ b/assets/css/sezai.css
@@ -66,8 +66,10 @@ footer.son .text-light{
   
   
 }
-form.date a{
-    z-index: 66;
+form.date .input-group a{
+    height: 100%;
+    width: 100%;
+    z-index: 999;
     background-color: red;
     border-radius: 3rem solid red;
 }
